# insane_dataset_tools

./: .gitignore  .gitmodules  LICENSE  README.md
.github/workflows/: built-container.yml
calibration/mag/: mag_cal_yaml_format.m  mag_extrinsic_calibration.m  mag_imu_calibration.m  mag_intrinsic_calibration.m  mag_write_yaml.m  (+1 more)
catkin_ws/src/insane_msgs/: CMakeLists.txt  LICENSE  package.xml
catkin_ws/src/insane_msgs/msg/: MotorSpeed.msg  TagDistance.msg
conda_environment/: env_insane.yml
data_extraction/: data_stitching.m  extract_data.m  gps_mag_orientation.m
docker/: dockerfile
gps_map_evaluation/: gps_map_eval.m
post_scripts/: csv2bag.py  export_nav_img.py  export_stereo_img.py  export_tag_data.py  tag_info.yaml  view_all_bag_with_rqt.sh
ros_topic_tools/: read_decawave_uwb_msgs.m  read_fiducial_marker_msgs.m  read_fluidpressure_sensor_msgs.m  read_geometry_twist_msgs.m  read_geometry_twist_w_cov_msgs.m  read_gps_navsat.m  read_gsv_array.m  read_imu_sensor_msgs.m  read_magneticfield_msgs.m  read_motor_speed_msgs.m  read_odometry_nav_msgs.m  read_pose_stamped.m  read_pose_transform_stamped.m  read_range_sensor_msgs.m  read_transform_geometry_msgs.m  read_ublox_navpvt.m  read_uwb_bridge_msgs.m
tools/: PointsFromPlot.m  align_gps_topics.m  crop_data_struct.m  find_position_outlier.m  find_quaternion_outlier.m  geometric_median.m  get_rotation_from_two_vectors.m  gpstime2utc.m  mean_quaternion.m  median_of_transform.m  process_uwb.m  rotm_to_ang_vel.m  sensor_stats_from_csv.m  skew_inv.m  sync_data_struct.m  transform_between_trajectories.m
(+51 files in other folders)
